--- a/android/app/src/main/res/layout/fragment_preview.xml
+++ b/android/app/src/main/res/layout/fragment_preview.xml
@@ -8,7 +8,6 @@
     android:id="@+id/previewFragment"
     tools:context=".view.academicianView.PreviewFragment">
 
-
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView2"
@@ -50,7 +49,7 @@
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
-    <!-- Scrollable içerik -->
+    <!-- ScrollView -->
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -100,8 +99,8 @@
 
                         <ImageView
                             android:id="@+id/academicianPhoto"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
+                            android:layout_width="85dp"
+                            android:layout_height="85dp"
                             android:layout_marginStart="10dp"
                             android:layout_marginEnd="30dp"
                             android:background="@drawable/rounded_img"
@@ -164,6 +163,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="2dp"
                         android:text="Akademik Geçmiş"
                         android:textColor="#1A9AAF"
                         android:textSize="17sp"
@@ -175,7 +175,7 @@
                         android:layout_height="wrap_content"
                         android:text=""
                         android:textColor="#000000"
-                        android:textSize="16sp" />
+                        android:textSize="15sp" />
 
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -648,8 +648,5 @@
 
         </LinearLayout>
     </ScrollView>
-
-    <!-- Alt Navigasyon -->
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
