--- a/android/app/src/main/res/layout/item_request.xml
+++ b/android/app/src/main/res/layout/item_request.xml
@@ -12,82 +12,112 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="15dp">
+        android:padding="7dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="7dp">
 
-            <TextView
-                android:id="@+id/titleRequest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Talep Başlığı"
-                android:textColor="#000000"
-                android:textSize="17sp"
-                android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/requestImage2"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="10dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/rounded_img"
+            android:clipToOutline="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/icon_company" />
 
-            <ImageView
-                android:id="@+id/iconDetail"
-                android:layout_width="27dp"
-                android:layout_height="27dp"
-                android:layout_alignParentEnd="true"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/baseline_arrow_forward_ios_24" />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/messageRequest"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="4dp"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:text="Talep açıklaması buraya gelecek..."
-            android:textColor="#666666"
-            android:textSize="14sp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:paddingVertical="5dp"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/titleRequest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Talep Başlığı"
+                    android:textColor="#000000"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/iconDetail"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:layout_alignParentEnd="true"
+                    android:padding="5dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/baseline_arrow_forward_ios_24" />
+
+            </RelativeLayout>
 
             <TextView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="5dp"
-                android:text="📆"
-                android:tint="#888888" />
-
-            <TextView
-                android:id="@+id/dateRequest"
-                android:layout_width="wrap_content"
+                android:id="@+id/messageRequest"
+                android:layout_width="330dp"
                 android:layout_height="wrap_content"
-                android:text="22.07.2025"
+                android:layout_marginVertical="4dp"
+                android:maxLines="2"
+                android:ellipsize="end"
+                android:text="Talep açıklaması buraya gelecek..."
                 android:textColor="#666666"
                 android:textSize="13sp" />
-        </LinearLayout>
-
-        <!--KATEGORİLER-->
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:overScrollMode="never"
-            android:scrollbars="none">
 
             <LinearLayout
-                android:id="@+id/containerCategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingEnd="16dp" />
-        </HorizontalScrollView>
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="5dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginRight="5dp"
+                    android:text="📆"
+                    android:tint="#888888" />
+
+                <TextView
+                    android:id="@+id/dateRequest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="22.07.2025"
+                    android:textColor="#666666"
+                    android:textSize="13sp" />
+            </LinearLayout>
+
+            <!--KATEGORİLER-->
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:overScrollMode="never"
+                android:scrollbars="none">
+
+                <LinearLayout
+                    android:id="@+id/containerCategory"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingEnd="16dp" />
+            </HorizontalScrollView>
+
+        </LinearLayout>
+    </LinearLayout>
+
 
     </LinearLayout>
 
