--- a/android/app/src/main/res/layout/item_request_card.xml
+++ b/android/app/src/main/res/layout/item_request_card.xml
@@ -10,86 +10,108 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="15dp">
+        android:orientation="horizontal"
+        android:padding="7dp">
 
-        <!-- Başlık ve silme ikonu -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/requestTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Talep Başlığı"
-                android:textColor="#000000"
-                android:textSize="17sp"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:id="@+id/deleteIcon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_alignParentEnd="true"
-                android:background="@drawable/bg_delete_shadow"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/baseline_delete_24" />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/requestMessage"
-            android:layout_width="330dp"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="4dp"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:text="Talep açıklaması buraya gelecek..."
-            android:textColor="#666666"
-            android:textSize="14sp" />
+        <ImageView
+            android:id="@+id/requestImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="10dp"
+            android:adjustViewBounds="true"
+            android:background="@drawable/rounded_img"
+            android:clipToOutline="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/icon_company" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:layout_weight="1"
+            android:paddingVertical="5dp"
+            android:orientation="vertical">
+
+            <!-- Başlık ve silme ikonu -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/requestTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Talep Başlığı"
+                    android:textColor="#000000"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/deleteIcon"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/bg_delete_shadow"
+                    android:padding="5dp"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/baseline_delete_24" />
+
+            </RelativeLayout>
 
             <TextView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_marginRight="5dp"
-                android:text="📆"
-                android:tint="#888888" />
-
-            <TextView
-                android:id="@+id/requestDate"
-                android:layout_width="wrap_content"
+                android:id="@+id/requestMessage"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="22.07.2025"
+                android:layout_marginVertical="4dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:text="Talep açıklaması buraya gelecek..."
                 android:textColor="#666666"
                 android:textSize="13sp" />
-        </LinearLayout>
-
-        <!--KATEGORİLER-->
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:overScrollMode="never"
-            android:scrollbars="none">
 
             <LinearLayout
-                android:id="@+id/categoryContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingEnd="16dp" />
-        </HorizontalScrollView>
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="5dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_marginRight="5dp"
+                    android:text="📆"
+                    android:tint="#888888" />
+
+                <TextView
+                    android:id="@+id/requestDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="22.07.2025"
+                    android:textColor="#666666"
+                    android:textSize="13sp" />
+            </LinearLayout>
+
+            <!--KATEGORİLER-->
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:overScrollMode="never"
+                android:scrollbars="none">
+
+                <LinearLayout
+                    android:id="@+id/categoryContainer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingEnd="16dp" />
+            </HorizontalScrollView>
+
+        </LinearLayout>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
+
 
