--- a/android/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/android/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,10 +3,16 @@
 
     <item
         android:id="@+id/pendingRequestAcademicianFragment"
-        android:icon="@drawable/baseline_comment_24"/>
+        android:icon="@drawable/baseline_format_list_bulleted_24"/>
+
+    <item
+        android:id="@+id/requestAcademicianFragment"
+        android:icon="@drawable/baseline_add_24"/>
+
     <item
         android:id="@+id/previewFragment"
         android:icon="@drawable/baseline_home_24"/>
+
     <item
         android:id="@+id/profileFragment"
         android:icon="@drawable/baseline_person_24"/>
